[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Scenes/SubOptions/PlaylistGrid/PlaylistGrid.gd" type="Script" id=1]
[ext_resource path="res://src/assets/Icons/White/General/add_1_72px.png" type="Texture" id=2]
[ext_resource path="res://src/assets/Icons/White/Folder/add folder_72px.png" type="Texture" id=3]
[ext_resource path="res://src/assets/Icons/White/General/add_72px.png" type="Texture" id=4]
[ext_resource path="res://src/Ressources/Themes/LyricsEditor.tres" type="StyleBox" id=5]

[node name="Playlists" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1110.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 1050.0
margin_bottom = 580.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Playlists" type="GridContainer" parent="MarginContainer/HBoxContainer/ScrollContainer"]
margin_right = 1050.0
margin_bottom = 580.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1060.0
margin_right = 1100.0
margin_bottom = 580.0
rect_min_size = Vector2( 40, 0 )
custom_styles/panel = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
margin_right = 40.0
margin_bottom = 580.0

[node name="CreatePlaylist" type="TextureButton" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer" groups=["Context"]]
margin_right = 40.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="CreateFromFolder" type="TextureButton" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer" groups=["Context"]]
margin_top = 32.0
margin_right = 40.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 24 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="CreateSmartPlaylist" type="TextureButton" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer" groups=["Context"]]
margin_top = 64.0
margin_right = 40.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 24 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
